--- a/me/index.html
+++ b/me/index.html
@@ -10,6 +10,12 @@
     </script>
     <link rel="stylesheet" href="/assets/css/me.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta property="og:title" content="Judy Hopps">
+    <meta property="og:site_name" content="Floofi">
+    <meta property="og:description" content="I design, write, test and deploy software, train AI models, manage servers, learn about tech and dream a lot.">
+    <meta property="og:image" content="https://www.gravatar.com/avatar/890db7c4dc714ef83d95d4291bd40737.jpg?s=630">
+    <meta property="og:url" content="https://me.floo.fi">
+    <meta property="og:type" content="profile">
 </head>
 <body>
     <div id="loader" style="background-color: black; position: fixed; inset: 0; z-index: 9; display: flex; align-items: center; justify-content: center;">
