--- a/pages/credits.html
+++ b/pages/credits.html
@@ -64,8 +64,8 @@
 </section>
 
 <script>
-    document.getElementById("credits-version").innerHTML = "Version " + window.version.version + " (build " + window.version.build +
-        ")<span class='mobile-break'> • </span>Built on " + new Date(window.version.timestamp).toUTCString();
+    document.getElementById("credits-version").innerHTML = "Version " + window.version.version + "." + window.version.build +
+        "<span class='mobile-break'> • </span>Built on " + new Date(window.version.timestamp).toUTCString();
 
     document.getElementById("credits-projects").innerText = Object.values(projects).map(i => Object.entries(i)).reduce((a, b) => [...a, ...b]).map(i => i[0]).join(", ");
 </script>
