--- a/me/index.html
+++ b/me/index.html
@@ -31,7 +31,7 @@
                         <h1 id="header-title">%lang.header%</h1>
                         <div id="header-description">
                             <p>%lang.aka%<span class="mobile-break"> • </span>%lang.description%</p>
-                            <div>%lang.pronouns% • %lang.species% <span class="hc">🐇</span> • <a href="https://floo.fi" target="_blank">Floofi</a> (%lang.floofi%)<span class="mobile-break"> • </span>%lang.job% • 🇫🇷</div>
+                            <div>%lang.pronouns% • <span class="hc">🐇🦌🦊</span> • <a href="https://floo.fi" target="_blank">Floofi</a> (%lang.floofi%)<span class="mobile-break"> • </span>%lang.job% • 🇫🇷</div>
                         </div>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
     </main>
 
     <footer>
-        © <a href="https://floo.fi" target="_blank">Floofi</a> • ❤️🐇
+        © <a href="https://floo.fi" target="_blank">Floofi</a> • ❤️🦊
     </footer>
 
     <script src="/assets/src/me.js"></script>
